package com.cjj.designpattern.behavioral.visitor;

import java.util.ArrayList;
import java.util.Iterator;

/**
 * Created by chenjj on 2018/12/28
 */
public class Directory extends Entry{
    private String name;
    private ArrayList dir=new ArrayList();

    public Directory(String name){
        this.name=name;
    }

    @Override
    public String getName() {
        return name;
    }

    @Override
    public int getSize() {
        int size=0;
        Iterator it=dir.iterator();
        while (it.hasNext()){
            Entry entry=(Entry)it.next();
            size+=entry.getSize();
        }
        return size;
    }

    @Override
    public void accept(Visitor v) {
      v.visit(this);
    }

    public Entry add(Entry entry){
        dir.add(entry);
        return this;
    }

    public Iterator iterator(){
        return dir.iterator();
    }
}
