package com.cjj.designpattern.behavioral.visitor;

import java.util.Iterator;

/**
 * Created by chenjj on 2018/12/28
 */
public class ListVisitor extends Visitor{
    private String currentdir;


    @Override
    public void visit(File file) {
        System.out.println(currentdir+"/"+file);
    }

    @Override
    public void visit(Directory directory) {
        System.out.println(currentdir+"/"+directory);
        String savedir=currentdir;
        currentdir=currentdir+"/"+directory.getName();
        Iterator it=directory.iterator();
        while (it.hasNext()){
            Entry entry=(Entry)it.next();
            entry.accept(this);
        }
        currentdir=savedir;
    }
}
