package com.cjj.designpattern.behavioral.visitor;


import com.cjj.designpattern.structural.composite.FileTreatmentException;

/**
 * Created by chenjj on 2018/12/28
 */
public class Main {
    public static void main(String[] args){
        try{
            System.out.println("Making root entries...");
            Directory rootdir=new Directory("root");
            Directory bindir=new Directory("bin");
            Directory tmpdir=new Directory("tmp");
            Directory usrdir=new Directory("usr");
            rootdir.add(bindir);
            rootdir.add(tmpdir);
            rootdir.add(usrdir);
            bindir.add(new File("vi",10000));
            bindir.add(new File("latex",20000));
            rootdir.accept(new ListVisitor());
            System.out.println("");
            System.out.println("Making user entries...");
            Directory yuki=new Directory("yuki");
            Directory hanako=new Directory("hanako");
            Directory tomura=new Directory("tomura");
            usrdir.add(yuki);
            usrdir.add(hanako);
            usrdir.add(tomura);
            yuki.add(new File("diary.html",100));
            yuki.add(new File("Composite",200));
            hanako.add(new File("memo.txt",300));
            tomura.add(new File("game.doc",400));
            tomura.add(new File("junk.mail",500));
            rootdir.accept(new ListVisitor());
        }catch (FileTreatmentException e){
            e.printStackTrace();
        }
    }
}
